update week 5 lab

--- a/coding_modules/lab7_python_PDF_CDF_extremes.ipynb
+++ b/coding_modules/lab7_python_PDF_CDF_extremes.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# just in case you did not get through the first section\n",
-    "df_concat_sel = pd.read_csv(\"python_inclass_practice_6.data.csv\",index_col=0,parse_dates=True)"
+    "df_concat_sel = pd.read_csv(\"../data/python_inclass_practice_6.data.csv\",index_col=0,parse_dates=True)"
    ]
   },
   {
